[tool.black]
line-length = 88

[tool.poetry]
name = "python-fastapi"
version = "0.1.0"
description = ""
authors = ["Frits <frits.vanturnhout@gmail.com>"]
readme = "README.md"
packages = [{include = "python_fastapi"}]

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.0.253"
black = "^23.1.0"
mypy = "^1.0.1"
vulture = "^2.7"
pytest = "^7.2.1"
requests = "^2.28.2"
types-requests = "^2.28.11.15"
beautifulsoup4 = "^4.11.2"
types-beautifulsoup4 = "^4.11.6.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
